--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,148 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  min-height: 100vh;
+  background: #3498db;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  min-width: 600px;
+  width: 70%;
+  padding: 20px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wrapper {
+  border-radius: 8px;
+  border: 2px solid #34495e;
+}
+
+.wrapper .text-input {
+  display: flex;
+  border-bottom: 2px solid #34495e;
+}
+
+.text-input .to-text {
+  border-radius: 0;
+  border-left: 2px solid #34495e;
+}
+
+.text-input textarea {
+  height: 200px;
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  background: #ecf0f1;
+  font-size: 16px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.text-input textarea::placeholder {
+  color: #7f8c8d;
+}
+
+.controls,
+li,
+.icons,
+.icons i {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.controls {
+  list-style: none;
+  padding: 10px;
+}
+
+.controls .row .icons {
+  width: 40%;
+}
+
+.controls .row .icons i {
+  width: 40px;
+  color: #2c3e50;
+  font-size: 14px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  justify-content: center;
+}
+
+.controls .row.from .icons,
+.controls .row.to .icons {
+  border: none;
+}
+
+.controls .row.from .icons {
+  padding-right: 10px;
+}
+
+.controls .row.to .icons {
+  padding-left: 10px;
+}
+
+.controls .row select {
+  color: #34495e;
+  border: none;
+  outline: none;
+  font-size: 16px;
+  background: #ecf0f1;
+  padding-left: 5px;
+}
+
+.text-input textarea::-webkit-scrollbar {
+  width: 6px;
+}
+
+.controls .row select::-webkit-scrollbar {
+  width: 8px;
+}
+
+.text-input textarea::-webkit-scrollbar-track,
+.controls .row select::-webkit-scrollbar-track {
+  background: #ecf0f1;
+}
+
+.text-input textarea::-webkit-scrollbar-thumb {
+  background: #bdc3c7;
+  border-radius: 8px;
+}
+
+.controls .row select::-webkit-scrollbar-thumb {
+  background: #7f8c8d;
+  border-radius: 8px;
+  border-right: 2px solid #ecf0f1;
+}
+
+.controls .exchange {
+  color: #2c3e50;
+  cursor: pointer;
+  font-size: 16px;
+  transition: transform 0.2s ease;
+}
+
+.container button {
+  width: 100%;
+  padding: 12px;
+  outline: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  background: #3498db;
 }
